<resources>
    <string name="app_name">Orioni</string>
    <string name="textView_empty">TextView</string>
    <string name="editText_first_name">Nombre</string>
    <string name="editText_Product_name">Nombre</string>
    <string name="editText_last_name">Apellido</string>
    <string name="button_change_password">Cambiar Contraseña</string>
    <string name="editText_password">Contraseña</string>
    <string name="editText_actual_password">Contraseña Actual</string>
    <string name="editText_new_password">Nueva Contraseña</string>
    <string name="button_update_password">Actualizar Contraseña</string>
    <string name="editText_Email">Correo</string>
    <string name="editText_price">Precio</string>
    <string name="editText_date">Fecha</string>
    <string name="button_submit">Aceptar</string>
    <string name="button_show_products">Ver Productos</string>
    <string name="button_show_my_products">Ver Mis Productos</string>
    <string name="button_create_products">Crear Productos</string>
    <string name="button_main_menu">Menu Principal</string>
    <string name="Value">Valor</string>
    <string name="Edit">Editar</string>
    <string name="Cancel">Cancelar</string>
    <string name="Save">Guardar</string>
    <string name="Delete">Borrar</string>
    <string name="Register">Registrarse</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="MyProfile">Mi Perfil</string>
    <string name="SignOut">Cerrar Sesión</string>
    <string name="Exchange">Intercambiar</string>
    <string name="ResetPassword">¿Olvidaste la contraseña?</string>
    <string name="ConfirmPassword">Confirmar contraseña</string>
</resources>
