<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfile">

    <TextView
        android:id="@+id/TB_UserFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/editText_first_name" />

    <TextView
        android:id="@+id/TB_UserLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/editText_last_name" />

    <EditText
        android:id="@+id/ET_UserFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:inputType="none" />

    <EditText
        android:id="@+id/ET_UserLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="10dp"
        android:inputType="none" />

    <Button
        android:id="@+id/B_edit"
        android:onClick="editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Edit" />

    <Button
        android:id="@+id/B_Save"
        android:onClick="saveUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:text="@string/Save" />

    <Button
        android:id="@+id/B_Cancel"
        android:onClick="cancelEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:text="@string/Cancel" />

    <Button
        android:onClick="verProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_main_menu" />

    <ListView
        android:id="@+id/listProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </ListView>
</LinearLayout>